--- a/.github/workflows/my_first_workflow.yml
+++ b/.github/workflows/my_first_workflow.yml
@@ -5,6 +5,8 @@ jobs:
     first_job:
         runs-on: ubuntu-latest
         steps:          
+            - name: Checkout code
+              uses: actions/checkout@v4 
             - name: Print a message
               run: echo "Hello, world!"
             - name: List Files
