Add ASCII Artwork

--- a/.github/workflows/my_first_workflow.yml
+++ b/.github/workflows/my_first_workflow.yml
@@ -7,9 +7,18 @@ jobs:
         steps:          
             - name: Checkout code
               uses: actions/checkout@v4 
-            - name: Print a message
-              run: echo "Hello, world!"
-            - name: List Files
-              run: ls
-            - name: Read Files
-              run: cat README.md
+
+            - name: Multiple Commands
+              run: |
+                echo "Hello, world!"
+                ls -la
+                cat README.md
+            
+            - name: Generate ASCII Artwork
+              run: |
+                echo "  _____ _          _ _"
+                echo " / ____| |        | | |"
+                echo "| |    | |__   ___| | | ___"
+                echo "| |    | '_ \ / _ \ | |/ _ \"
+                echo "| |____| | | |  __/ | |  __/"
+                echo " \_____|_| |_|\___|_|_|\___|"        
