--- a/.github/workflows/my_first_workflow.yml
+++ b/.github/workflows/my_first_workflow.yml
@@ -13,7 +13,7 @@ jobs:
                 echo "Hello, world!"
                 ls -la
                 cat README.md
-            
+             
             - name: Generate ASCII Artwork
               run: |
                 echo "  _____ _          _ _"
@@ -21,4 +21,4 @@ jobs:
                 echo "| |    | |__   ___| | | ___"
                 echo "| |    | '_ \ / _ \ | |/ _ \"
                 echo "| |____| | | |  __/ | |  __/"
-                echo " \_____|_| |_|\___|_|_|\___|"        
+                echo "| \_____|_| |_|\___|_|_|\___|"
