--- a/.github/workflows/my_first_workflow.yml
+++ b/.github/workflows/my_first_workflow.yml
@@ -19,6 +19,6 @@ jobs:
                 echo "  _____ _          _ _"
                 echo " / ____| |        | | |"
                 echo "| |    | |__   ___| | | ___"
-                echo "| |    | '_ \ / _ \ | |/ _ \"
+                echo "| |    | '_ \\ / _ \\ | |/ _ \\"
                 echo "| |____| | | |  __/ | |  __/"
-                echo "| \_____|_| |_|\___|_|_|\___|"
+                echo " \\_____|_| |_|\\___|_|_|\\___|"
